--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
 .App {
-  text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navBar {
+    border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sobreMi {
+    margin-top: 10vw;
+    margin-bottom: 10vw;
+    margin-right: 10vw;
+    margin-left: 10vw;
+    background-color: #f5f7f9;
+    padding: 5vw;
+    border-radius: 25%;
+    border-style: solid;
+    border-color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.imagenSobreMi {
+    text-align: center;
+    width: 100%;
+    height: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.datos {
+    margin-top: 10vw;
+    margin-bottom: 10vw;
+    margin-right: 10vw;
+    margin-left: 10vw;
+    background-color: #f5f7f9;
+    padding: 5vw;
+    border-radius: 25%;
+    border-style: solid;
+    border-color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imagenDatos {
+    text-align: center;
+    width: 80%;
+    height: auto;
+}
+
+.contacto {
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+    background-color: #f5f7f9;
+    border-style: solid;
+    border-color: black;
+}
+
+a.linkedin {
+    color: #4968ad;
+}
+
+a.youtube {
+    color: #eb3223;
+}
+
+a.instagram {
+    color: black;
+}
+
+a.facebook {
+    color: #4968ad;
 }
